syntax = "proto3";

package proto;

option go_package = "ai-pdf-assistant-backend/proto";

// Common status and error types
enum Status {
  STATUS_UNKNOWN = 0;
  STATUS_SUCCESS = 1;
  STATUS_ERROR = 2;
  STATUS_NOT_FOUND = 3;
  STATUS_PROCESSING = 4;
}

// Error details
message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Pagination support (for future use)
message Pagination {
  int32 page = 1;
  int32 page_size = 2;
  int32 total = 3;
}

